--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ body {
 .link-details {
 	font-size: 18px;
 	color: #000;
+	margin-left: 10px;
 }
 .link-details:hover {
 	color:blue;
@@ -45,6 +46,7 @@ body {
 }
 .comments-count {
 	float: right;
+	color:gray;
 }
 .go-back {
 	font-size: 30px;
@@ -67,7 +69,26 @@ body {
 	float: right;
 	margin-left: 10px;
 }
+.edit-comment a {
+	color:inherit;
+}
+.red:hover {
+	color:red;
+}
+
 .no-comments {
-	
 	background: #ded;
+}
+.information-no {
+	text-align: center;
+	border: 1px solid gray;
+	background: #ffffe6;
+	color:gray;
+	margin-top: 4px;
+	display: block;
+}
+.navigation {
+	position: absolute;
+	top:0;
+	left: 0;
 }
